--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,6 +82,28 @@ nav h1 a {
     font-weight: 700;
 }
 
+/* Send Review Styling */
+#popUpBackground{
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.1);
+  
+}
+#addReviewPopUp{
+  width: 200px;
+  height: 350px;
+  margin-top: 100px;
+  background: #fff;
+  padding: 25px;
+  border: 1px solid #f3f3f3;
+  z-index: 1500;
+
+}
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
