--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,28 +82,6 @@ nav h1 a {
     font-weight: 700;
 }
 
-/* Send Review Styling */
-#popUpBackground{
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  /* align-items: center; */
-
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.1);
-  
-}
-#addReviewPopUp{
-  width: 200px;
-  height: 350px;
-  margin-top: 100px;
-  background: #fff;
-  padding: 25px;
-  border: 1px solid #f3f3f3;
-  z-index: 1500;
-
-}
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
@@ -349,6 +327,7 @@ nav h1 a {
   padding: 30px 40px 80px;
   width: 100%;
   order: 5;
+  text-align: center;
 }
 #reviews-container h3 {  
   color: #f58500;
@@ -357,6 +336,7 @@ nav h1 a {
   letter-spacing: -1px;
   padding-bottom: 1pt;
   text-align: center;
+  margin-bottom: 0px;
 }
 #reviews-list {
   padding: 20px;
@@ -384,6 +364,7 @@ nav h1 a {
 #reviews-list li .review-header{
   background-color: #252831;
   padding: 10px 15px;
+  text-align: left;
 }
 #reviews-list li .review-name{
   display: inline-block;
@@ -410,6 +391,129 @@ text-align: justify;
 margin: 10px 20px;
 }
 
+#review-form{
+  height: 0px;
+}
+
+#addReview{
+    padding: 15px 30px;
+    margin-bottom: 15px;
+    border-radius: 20px;
+    background-color: orange;
+    border: none;
+    box-shadow: -2px -1px 1px 1px rgba(189,183,189,1);
+}
+
+#addReview a {
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.addReviewFormContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.addReviewFormContainer form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#reviewerName{
+  color: orange;
+  font-size: 16px;
+  font-weight: 600;
+  background-color: transparent;
+  border: none;
+  display: block;
+}
+#reviewerName::placeholder{
+  color: orange;
+}
+#add-review-container{
+  margin: 10px 10px 30px 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 20px;
+  background-color: #fff;
+  border: 2px solid #f3f3f3;
+  display: block;
+  list-style-type: none;
+  position: relative;
+  width: 95%;
+  max-width: 550px;
+
+}
+#add-review-container .header{
+  background-color: #252831;
+  padding: 10px 15px;
+  text-align: left;
+  position: relative;
+  border-radius: 20px 20px 0 0;
+}
+
+#add-review-close{
+  position: absolute;
+  right: -10px;
+  padding: 13px 18px;
+  top: -10px;
+  z-index: 1000;
+  background-color: orange;
+  color: #000;
+  font-weight: 700;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 50%;
+  box-shadow: -1px 1px 15px -2px rgba(0,0,0,0.75);
+}
+#add-review-container .body{
+padding: 15px;
+}
+#add-review-container .rating-div{
+padding: 10px;
+}
+
+#add-review-container .rating-div label{
+  margin: 10px 0 10px 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 15px;
+  background-color: orange;
+}
+#reviewerRating{
+  margin: 10px 0 10px 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 15px;
+  padding: 5px 10px;
+  width: 60px;
+  border-radius: 5px;
+  background-color: orange;
+}
+#reviewerComments{
+  resize: none;
+  border-radius: 10px;
+  padding: 10px;
+  width: 90%;
+
+}
+#formSubmittion{
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+  background-color: orange;
+  border: none;
+  box-shadow: -2px -1px 1px 1px rgba(189,183,189,1);
+  color: #000;
+  font-size: 15px;
+  font-weight: 700;
+}
 #restaurant-hours {
   border-collapse: collapse;
   border-spacing: 0;
