--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -429,6 +429,11 @@ margin: 10px 20px;
   background-color: transparent;
   border: none;
   display: block;
+  width: 80%;
+  max-width: 200px;
+}
+#reviewerName:active{
+border-bottom: 1px solid orange;
 }
 #reviewerName::placeholder{
   color: orange;
@@ -501,6 +506,7 @@ padding: 10px;
   border-radius: 10px;
   padding: 10px;
   width: 90%;
+  font-family: Arial,Helvetica,sans-serif;
 
 }
 #formSubmittion{
