--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -509,7 +509,7 @@ padding: 10px;
   font-family: Arial,Helvetica,sans-serif;
 
 }
-#formSubmittion{
+#formSubmission{
   padding: 10px 20px;
   margin-bottom: 20px;
   border-radius: 20px;
@@ -519,6 +519,16 @@ padding: 10px;
   color: #000;
   font-size: 15px;
   font-weight: 700;
+}
+#formErrors .error{
+  margin: 10px;
+  background-color: rgba(255, 0, 0, 0.8);
+  border-radius: 20px;
+  padding: 10px;
+  font-weight: 700;
+  font-size: 15px;
+  color: white;
+  text-align: center;
 }
 #restaurant-hours {
   border-collapse: collapse;
